Re-design test